--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@near-wallet-selector/core": "^7.9.2",
+    "@near-wallet-selector/default-wallets": "^7.9.2",
+    "@near-wallet-selector/meteor-wallet": "^7.9.2",
+    "@near-wallet-selector/modal-ui": "^7.9.2",
+    "@near-wallet-selector/sender": "^7.9.2",
     "core-js": "^3.6.5",
+    "near-api-js": "^2.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.2",
     "regenerator-runtime": "0.13.7",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -55,6 +63,7 @@
     "vite": "^4.0.1",
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-node-polyfills": "^0.7.0",
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.25.8"
   }
