--- a/libs/near-contract/package.json
+++ b/libs/near-contract/package.json
@@ -6,9 +6,9 @@
     "deploy": "cd contract && ./deploy.sh",
     "build": "npm run build:contract",
     "build:contract": "cd contract && ./build.sh",
-    "test": "npm run test:unit && npm run test:integration",
+    "test": "npm run build && npm run test:unit && npm run test:integration",
     "test:unit": "cd contract && cargo test",
-    "test:integration": "cd integration-tests && npm test -- -- \"./contract/target/wasm32-unknown-unknown/release/hello_near.wasm\"",
+    "test:integration": "cd integration-tests && npm test -- -- \"./contract/target/wasm32-unknown-unknown/release/near_contract.wasm\"",
     "postinstall": "echo no frontend && cd integration-tests && npm install && cd .. && echo rs contract"
   },
   "devDependencies": {
